--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,8 @@ pefile==2019.4.18
 pickle-mixin==1.0.2
 Pillow==7.2.0
 pipreqs==0.4.10
-pyeeg==0.4.4
+plotly==4.11.0
+protobuf==3.13.0
 pyinstaller==4.0
 pyinstaller-hooks-contrib==2020.10
 pylint==2.6.0
